--- a/index.html
+++ b/index.html
@@ -183,12 +183,13 @@ p.center {
 }
 /*--- Start 3 Column Image & Text Section --*/
 .outer-table-2 {
-	width: 100%;
-	max-width: 670px;
-	margin: 22px auto;
-	background-color: #C2C1C1;
-    border-bottom: 3px solid #81B9C3;
-    border-top: 3px solid #81B9C3;
+  width: 100%;
+  margin: 22px auto;
+  border-bottom: 4px solid #4c7579;
+  border-top: 4px solid #4c7579;
+  background: url(img/outter-table-2.jpg)center center no-repeat;
+  background-size: cover;
+  height: 250px;
 }
 .three-column {
     text-align: center;
@@ -418,68 +419,7 @@ img.img-responsive {
         </table><!--End Main-Table-->
         <table class="outer-table-2">
           <tr>
-            <td class="three-column">
-              <div class="section">
-                <table width="100%">
-                  <tr>
-                    <td class="inner-td">
-                      <table class="content">
-                        <tr>
-                          <td>
-                            <img src="img/lips3.jpg" alt="">
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="text">
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                          </td>
-                        </tr>
-                      </table>
-                    </td>
-                  </tr>
-                </table>
-              </div><!--End 1 of 3-->
-              <div class="section">
-                <table width="100%">
-                  <tr>
-                    <td class="inner-td">
-                      <table class="content">
-                        <tr>
-                          <td>
-                            <img src="img/lips4.jpg" alt="">
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="text">
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                          </td>
-                        </tr>
-                      </table>
-                    </td>
-                  </tr>
-                </table>
-              </div><!--End 2 of 3-->
-              <div class="section">
-                <table width="100%">
-                  <tr>
-                    <td class="inner-td">
-                      <table class="content">
-                        <tr>
-                          <td>
-                            <img src="img/lips.jpg" alt="">
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="text">
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                          </td>
-                        </tr>
-                      </table>
-                    </td>
-                  </tr>
-                </table>
-              </div><!--End 3 of 3-->
-            </td><!--End Three Column Section-->
+            
           </tr>
         </table><!--End Outer Table 2-->
         <table class="main-table">
