--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body {
 	background-color: #000;
 	max-width: 670px;
   Margin: 0 auto;
-  border: 5px solid #4c7579;
+  border: 3px solid #4c7579;
 }
 table {
 	border-spacing: 0;
@@ -44,6 +44,10 @@ td {
 p {
     Margin:0;
 }
+.quote{
+  background: linear-gradient(black, #ff000000, black),url(img/center.jpg) center center no-repeat;
+    background-size: contain;
+}
 .quote p{
   text-align: center;
     width: 70%;
@@ -55,7 +59,7 @@ p {
     padding: 30px 0;
 }
 a {
-    color: #F1F1F1;
+    color: #000;
     text-decoration: none;
 }
 /*--- End Outer Table 1 --*/
@@ -64,7 +68,8 @@ a {
   background-size: cover;
   width: 100%;
   height: 250px;
-  margin-top: 30px;
+  border-top: 3px solid #4d7678;
+  border-bottom: 3px solid #4e757a;
 }
 /*--- Start Two Column Sections --*/
 .two-column {
@@ -123,9 +128,10 @@ img.logo {
 }
 /*--- Start Outer Table Banner Image, Text & Button --*/
 .image{
-  background: linear-gradient(black, #ff000000, #ff000000),url(http://www.silenthillmemories.net/sh2/wallpapers/pics/sh2_18_1024.jpg)center center no-repeat;
+  background: linear-gradient(black, #ff000000, #ff000000),url(img/main.jpg)center center no-repeat;
     height: 400px;
     background-size: cover;
+    background-position-y: bottom;
 }
 .main-table {
     width: 100%;
@@ -220,11 +226,9 @@ p.center {
 }
 /*--- Start Two Column Article Section --*/
 .outer-table-3 {
-    width: 100%;
-    max-width: 670px;
-    margin: 22px auto;
-    background-color: #C2C1C1;
-    border-top: 3px solid #81B9C3;
+  width: 100%;
+  max-width: 670px;
+  margin-top: 22px;
 }
 .h3 {
 	text-align: center;
@@ -252,23 +256,17 @@ p.center {
 }
 /*--- Start Footer Section --*/
 .footer {
-	width: 100%;
-	background-color: #C2C1C1;
-	Margin: 0 auto;
-    color: #FFF;
-}
-.footer  img {
-	max-width: 135px;
-	Margin: 0 auto;
-	display: block;
-	padding: 4% 0 1% 0;
-}
-p.footer {
-	text-align: center;
-	color: #FFF!important;
-	line-height: 30px;
-	padding-bottom: 4%;
-    text-transform: uppercase;
+  width: 100%;
+  background: url(img/footer.jpg)center center no-repeat;
+  background-size: contain;
+  background-color: white;
+  height: 200px;
+  border-top: 3px solid #4c7579;
+  background-position-x: left;
+  text-align: center;
+  color: #000;
+  line-height: 30px;
+  text-transform: uppercase;
 }
 /*--- Media Queries --*/
 @media screen and (max-width: 400px) {
@@ -494,8 +492,7 @@ img.img-responsive {
               <table width="100%">
                 <tr>
                   <td class="footer">
-                    <img src="img/back3.jpg" alt="">
-                    <p class="footer">1000 Main Stree, NY New York 19000<br>Urban Decay 2018<br><a href="#">Unsubscribe</a></p>
+                    SILENT HILL <br>KONAMI 2018<br><a href="#">Unsubscribe</a>
                   </td>
                 </tr>
               </table>
