image updates and CSS

--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@ p {
     Margin:0;
 }
 .quote{
-  background: linear-gradient(black, #ff000000, black),url(img/center.jpg) center center no-repeat;
-    background-size: contain;
+  background: linear-gradient(black, #ff000000, black),url(img/center2.jpg) center center no-repeat;
+  background-size: contain;
+  background-position-x: right;
 }
 .quote p{
   text-align: center;
@@ -133,13 +134,6 @@ img.logo {
     background-size: cover;
     background-position-y: bottom;
 }
-.main-table {
-    width: 100%;
-    max-width: 610px;
-    margin: 0 auto;
-    background-color: #FFF;
-    border-radius: 6px;
-}
 .one-column .inner-td {
     font-size: 16px;
     line-height: 20px;
@@ -190,7 +184,6 @@ p.center {
 /*--- Start 3 Column Image & Text Section --*/
 .outer-table-2 {
   width: 100%;
-  margin: 22px auto;
   border-bottom: 4px solid #4c7579;
   border-top: 4px solid #4c7579;
   background: url(img/outter-table-2.jpg)center center no-repeat;
@@ -356,65 +349,6 @@ img.img-responsive {
             </td>
           </tr>
         </table><!--End Banner Image-->
-        <table class="main-table">
-          <tr>
-            <td class="one-column">
-              <table width="100%">
-                <tr>
-                  <td class="inner-td">
-                    <p class="h2">Weekly Newsletter</p>
-                    <p class="center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur, dolore, non illum veniam sequi nisi quaerat reprehenderit quidem quia tempore distinctio consequuntur accusantium commodi! Corrupti cum expedita magnam nam debitis.</p>
-                    <p class="button-holder-center"><a href="#" class="center">Find in stores!</a></p>
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr><!--End Heading, Paragraph-->
-          <tr>
-              <td class="two-column">
-                <div class="section">
-                  <table width = "100%">
-                    <tr>
-                      <td class="inner-td">
-                        <table class="content">
-                          <tr>
-                            <td>
-                              <img src="img/lips2.jpg" alt="red and gold lipstick" class="img-responsive">
-                            </td>
-                          </tr>
-                          <tr>
-                            <td class="text">
-                              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa ratione velit vitae animi veniam ex quae id atque repellat, aperiam a ipsum ut voluptatibus ab cumque eaque harum ipsam exercitationem!</p>
-                            </td>
-                          </tr>
-                        </table>
-                      </td>
-                    </tr>
-                  </table>
-                </div><!--End First Column-->
-                <div class="section">
-                    <table width = "100%">
-                        <tr>
-                            <td class="inner-td">
-                              <table class="content">
-                                <tr>
-                                  <td>
-                                    <img src="img/lips2.jpg" alt="red and gold lipstick" class="img-responsive">
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td class="text">
-                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa ratione velit vitae animi veniam ex quae id atque repellat, aperiam a ipsum ut voluptatibus ab cumque eaque harum ipsam exercitationem!</p>
-                                  </td>
-                                </tr>
-                              </table>
-                            </td>
-                          </tr>
-                    </table>
-                  </div><!--End Second Column-->
-                </td>
-              </tr><!--End Two Column Section-->
-        </table><!--End Main-Table-->
         <table class="outer-table-2">
           <tr>
             
