--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@ p span{
 }
 .quote p{
   text-align: center;
-    width: 70%;
-    margin: 0 auto;
-    font-weight: 600;
-    color: #bbbbba;
-    font-style: italic;
-    font-size: 1.25em;
-    padding: 30px 0;
+  width: 70%;
+  margin: 0 auto;
+  color: #bbbbba;
+  font-style: italic;
+  font-size: 1.25em;
+  padding: 30px 0;
+  font-family: serif;
 }
 a {
     color: #000;
@@ -273,6 +273,11 @@ p.center {
   color: #000;
   line-height: 30px;
   text-transform: uppercase;
+  font-weight: 600;
+}
+.footer span{
+  font-weight: 400;
+  font-size: 12px;
 }
 .statement-table{
   font-size: 10px;
@@ -473,7 +478,7 @@ img.img-responsive {
               <table width="100%">
                 <tr>
                   <td class="footer">
-                    SILENT HILL <br>KONAMI 2018<br><a href="#">Unsubscribe</a>
+                    SILENT HILL <br>KONAMI 2018<br><span><a href="#">Unsubscribe</a></span>
                   </td>
                 </tr>
               </table>
